# codex-switch

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/codex_switch/: __init__.py  __main__.py  cache.py  cli.py  config.py  controller.py  repository.py  ui.py  usage.py
tests/: test_cli.py  test_cli_ui.py  test_controller.py  test_import.py  test_repository.py  test_usage.py  test_usage_helpers.py
