[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-switch"
version = "0.1.0"
description = "Python CLI/TUI for Codex account switching"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "textual>=0.83",
  "rich>=13.7",
  "requests>=2.32",
]

[project.scripts]
codex-switch = "codex_switch.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"
